[package]
authors = ["Tricked-dev"]
description = "A simple discord bot made for my [discord](https://discord.gg/mY8zTARu4g)"
edition = "2021"
license = "Apache-2"
name = "tricked-bot"
version = "1.3.0"
default-run = "tricked-bot"

[profile.release]
lto = true

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
openssl = { version = "0.10" }
rand = { version = "0.8", features = ["log", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  'macros',
  "parking_lot"
] }
toml = "^0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-bucket = "0.2"
twilight-cache-inmemory = "0.15"
twilight-gateway = { version = "0.15", features = ["native", "rustls-webpki-roots"] }
twilight-http = { version = "0.15", features = ["native"] }
twilight-model = "0.15"
urlencoding = "2.1.0"
clap = { version = "4.0.29", features = ["derive", "cargo", "env"] }
base64 = "0.13.1"
parking_lot = "0.12.1"
dotenv = { version = "0.15.0", features = ["clap"] }
openai_dive = "0.4.6"
color-eyre = "0.6.3"
vesper = "0.13.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
wb_sqlite = {git="https://github.com/wbcat/wb_sqlite"}
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde_rusqlite = "0.39.0"
rig-core = "0.13.0"
thiserror = "2.0.12"
