[package]
authors = ["Tricked-dev"]
description = "A simple discord bot made for my [discord](https://discord.gg/mY8zTARu4g)"
edition = "2021"
license = "Apache-2"
name = "tricked-bot"
version = "1.5.0"
default-run = "tricked-bot"

[profile.release]
lto = true

[dependencies]
bytes = "1"
futures = "0.3"
log = "0.4"
openssl = { version = "0.10" }
rand = { version = "0.9", features = ["log", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  'macros',
  "parking_lot",
] }
toml = "^0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-bucket = "0.2"
twilight-cache-inmemory = "0.15"
twilight-gateway = { version = "0.15", features = ["rustls-webpki-roots"] }
twilight-http = { version = "0.15", features = [] }
twilight-model = "0.15"
clap = { version = "4.0.29", features = ["derive", "cargo", "env"] }
base64 = "0.22.1"
parking_lot = "0.12.1"
dotenv = { version = "0.15.0", features = ["clap"] }
color-eyre = "0.6.3"
vesper = "0.13.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
serde_rusqlite = "0.39.0"
openrouter_api = { git = "https://github.com/socrates8300/openrouter_api.git", rev = "96f8bd7f5ec219abb2335ac16110835e15487c66" }
thiserror = "2.0.12"
r2d2_sqlite = "0.30.0"
r2d2 = "0.8.10"
wb_sqlite = "0.2.1"
rusqlite = { version = "0.36.0", features = ["bundled"] }
num-format = "0.4.4"
fasteval = "0.2.4"
png = "0.17"
axum = "0.8"
tera = "1"
tempfile = "3"
